--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -12,7 +12,14 @@ Java17目录\bin\java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens ja
 ```
 module A does not "opens B" to unnamed module @C
 ```
-在启动命令`-jar`前加上`--add-opens A/B=ALL-UNNAMED`即可，每个不同报错都要这么做
+在启动命令`-jar`前加上`--add-opens A/B=ALL-UNNAMED`（A/B中的内容为相关模块名称，可看以下示例）即可，每个不同报错都要这么做  
+
+示例：
+
+如果报错内容为：module `java.base` does not "opens `java.lang`" to unnamed module @?????? 那参数配置则为
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+```
 
 ## java.lang.UnsupportedClassVersionError
 请更换java到java17，[下载链接](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/17/jre/x64/windows/OpenJDK17U-jre_x64_windows_hotspot_17.0.2_8.zip)
