--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -23,3 +23,8 @@ module A does not "opens B" to unnamed module @C
 
 ## java.lang.UnsupportedClassVersionError
 请更换java到java17，[下载链接](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/17/jre/x64/windows/OpenJDK17U-jre_x64_windows_hotspot_17.0.2_8.zip)
+
+## 登陆服务器提示“无法连接:过期的服务器!”
+这种情况发生有两种可能性
+一:服务端协议更新导致服务器过期,等待服务端更新协议
+二:本机电脑的世界与服务端时间相差过大导致无法进入服务器,解决办法为同步本地时间或者在server.properties中设置check-login-time=off
