--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -34,8 +34,8 @@ module A does not "opens B" to unnamed module @C
 ```
 ERROR - Throwing java.util.concurrent.CompletionException: java.net.BindException: Address already in use: bind
 ```
-## 解决方案
-### Windows解决方案:
+### 解决方案
+#### Windows解决方案:
 win+R键打开运行窗口，窗口中输入cmd打开Windows系统自带的命令窗口
 ```
 netstat -ano|findstr 19132
@@ -52,7 +52,7 @@ C:\Users\Administrator>netstat -ano|findstr 19132
 taskkill /f /t /im 12228
 ```
 即可解除19132的端口占用
-### Linux解决方案
+#### Linux解决方案
 在命令框里输入以下命令
 ```
 netstat -tln | grep 19132
