--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -29,7 +29,7 @@ module A does not "opens B" to unnamed module @C
 一:服务端协议更新导致服务器过期,等待服务端更新协议  
 二:本机电脑的世界与服务端时间相差过大导致无法进入服务器,解决办法为同步本地时间或者在server.properties中设置check-login-time=off
 
-## 基础报错查看
+## 基本报错解决方案
 端口地址被占用报错:
 ```
 ERROR - Throwing java.util.concurrent.CompletionException: java.net.BindException: Address already in use: bind
