--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -34,7 +34,7 @@ module A does not "opens B" to unnamed module @C
 ```
 ERROR - Throwing java.util.concurrent.CompletionException: java.net.BindException: Address already in use: bind
 ```
-### 解决方案
+### 端口地址被占用解决方案
 #### Windows解决方案:
 win+R键打开运行窗口，窗口中输入cmd打开Windows系统自带的命令窗口
 ```
