--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -30,7 +30,7 @@ module A does not "opens B" to unnamed module @C
 二:本机电脑的世界与服务端时间相差过大导致无法进入服务器,解决办法为同步本地时间或者在server.properties中设置check-login-time=off
 
 ## 端口地址占用报错解决方案
-### 端口地址被占用报错为:
+### 端口地址冲突报错:
 ```
 ERROR - Throwing java.util.concurrent.CompletionException: java.net.BindException: Address already in use: bind
 ```
