--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -47,11 +47,10 @@ C:\Users\Administrator>netstat -ano|findstr 19132
   UDP    0.0.0.0:19132          *:*                                    12228
 ```
 查找到对应的端口后有对应的UDP号12228
-在Windows命令窗口中输入
+在Windows命令窗口中输入，即可解除19132的端口占用
 ```
 taskkill /f /t /im 12228
 ```
-即可解除19132的端口占用
 #### Linux解决方案
 在命令框里输入以下命令
 ```
