--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -1,9 +1,12 @@
-# server.properties配置
-##motd=PowerNukkitX Server
-
-##sub-motd
-server-port=19132
-server-ip=0.0.0.0
+# server.properties 介绍
+## motd=PowerNukkitX Server
+代表服务器显示
+## sub-motd=https://powernukkitx.cn
+代表外部Motd显示
+## server-port=19132
+代表服务器端口
+## server-ip=0.0.0.0
+代表服务器IP地址
 view-distance=10
 white-list=off
 achievements=on
