--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -7,31 +7,32 @@
 代表服务器端口
 ## server-ip=0.0.0.0
 代表服务器IP地址
-view-distance=10
-white-list=off
-achievements=on
-announce-player-achievements=on
-spawn-protection=16
-max-players=20
-allow-flight=off
-spawn-animals=on
-spawn-mobs=on
-gamemode=0
-force-gamemode=off
-hardcore=off
-pvp=on
-difficulty=1
-generator-settings=
-level-name=world
-level-seed=
-level-type=DEFAULT
-allow-nether=on
-allow-the_end=on
-use-terra=on
-enable-custom-item=off
-enable-query=on
-enable-rcon=off
-rcon.password=iMDhjOTcxN
-auto-save=on
-force-resources=off
-xbox-auth=on
+## view-distance=10
+代表服务器视距(强烈建议视距4-6)
+## white-list=off
+## achievements=on
+## announce-player-achievements=on
+## spawn-protection=16
+## max-players=20
+## allow-flight=off
+## spawn-animals=on
+## spawn-mobs=on
+## gamemode=0
+## force-gamemode=off
+## hardcore=off
+## pvp=on
+## difficulty=1
+## generator-settings=
+## level-name=world
+## level-seed=
+## level-type=DEFAULT
+## allow-nether=on
+## allow-the_end=on
+## use-terra=on
+## enable-custom-item=off
+## enable-query=on
+## enable-rcon=off
+## rcon.password=iMDhjOTcxN
+## auto-save=on
+## force-resources=off
+## xbox-auth=on
