--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -1,6 +1,6 @@
 # server.properties 介绍
 ## motd=PowerNukkitX Server
-代表服务器显示
+表示服务器名称显示
 ## sub-motd=https://powernukkitx.cn
 代表外部Motd显示
 ## server-port=19132
@@ -10,29 +10,56 @@
 ## view-distance=10
 代表服务器视距(强烈建议视距4-6)
 ## white-list=off
+是否开启服务器白名单(OFF关闭　ON开启)
 ## achievements=on
+是否开启成就系统(OFF关闭　ON开启)
 ## announce-player-achievements=on
+当玩家获得成就是否提示(OFF关闭　ON开启)
 ## spawn-protection=16
+出生点保护范围
 ## max-players=20
+最大玩家数量
 ## allow-flight=off
+是否允许飞行(OFF关闭　ON开启)
 ## spawn-animals=on
+是否生成动物(当前无效)(OFF关闭　ON开启)
 ## spawn-mobs=on
+是否生成怪物(当前无效)(OFF关闭　ON开启)
 ## gamemode=0
+游戏模式(0代表生存模式　1代表创造模式　2代表冒险模式　3代表旁观模式)
 ## force-gamemode=off
+是否强制游戏模式(OFF关闭　ON开启)
 ## hardcore=off
+是否开启硬核模式(OFF关闭　ON开启)
 ## pvp=on
+是否开启PVP(OFF关闭　ON开启)
 ## difficulty=1
+世界生存难度(0代表和平　1代表简单　2代表普通　3代表困难)
 ## generator-settings=
+世界生成器设置
 ## level-name=world
+主世界地图名称
 ## level-seed=
+主世界地图种子
 ## level-type=DEFAULT
+主世界地图类型
 ## allow-nether=on
+是否开启下界世界(OFF关闭　ON开启)
 ## allow-the_end=on
+是否开启末地世界(OFF关闭　ON开启)
 ## use-terra=on
+是否启用Terra史诗世界(OFF关闭　ON开启)
 ## enable-custom-item=off
+是否启用自定义物品(OFF关闭　ON开启)
 ## enable-query=on
+是否启用协议服务器监听器以显示服务器信息(OFF关闭　ON开启)
 ## enable-rcon=off
+是否启用服务器远程控制协议(OFF关闭　ON开启)
 ## rcon.password=iMDhjOTcxN
+远程控制协议密码
 ## auto-save=on
+自动保存(OFF关闭　ON开启)
 ## force-resources=off
+强制资源包(OFF关闭　ON开启)
 ## xbox-auth=on
+XBOX许可证(OFF关闭　ON开启)
