--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -1,8 +1,8 @@
 # server.properties 介绍
 ## motd=PowerNukkitX Server
-表示服务器名称显示
+表示服务器ESC显示名称
 ## sub-motd=https://powernukkitx.cn
-代表外部Motd显示
+代表外部MOTD显示
 ## server-port=19132
 代表服务器端口
 ## server-ip=0.0.0.0
@@ -14,7 +14,7 @@
 ## achievements=on
 是否开启成就系统(OFF关闭　ON开启)
 ## announce-player-achievements=on
-当玩家获得成就是否提示(OFF关闭　ON开启)
+当玩家获得成就是否播放(OFF关闭　ON开启)
 ## spawn-protection=16
 出生点保护范围
 ## max-players=20
