--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -42,7 +42,8 @@
 ## level-seed=
 主世界地图种子
 ## level-type=DEFAULT
-主世界地图类型
+主世界地图类型(DEFAULT　默认　FLAT超平坦)
+原版生成器　（下载地址）(https://github.com/KCodeYT/VanillaGenerator)
 ## allow-nether=on
 是否开启下界世界(OFF关闭　ON开启)
 ## allow-the_end=on
