--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -43,7 +43,8 @@
 主世界地图种子
 ## level-type=DEFAULT
 主世界地图类型(DEFAULT　默认)
-[纯原版生成器](https://github.com/KCodeYT/VanillaGenerator) (vanilla　原版世界)
+[纯原版生成器](https://github.com/KCodeYT/VanillaGenerator)　(vanilla　纯原版世界类型)
+[Terra史诗世界生成器](Terra问题.html)
 ## allow-nether=on
 是否开启下界世界(OFF关闭　ON开启)
 ## allow-the_end=on
