--- a/PowerNukkitX/faq/配置介绍.md
+++ b/PowerNukkitX/faq/配置介绍.md
@@ -26,7 +26,7 @@
 ## spawn-mobs=on
 是否生成怪物(当前无效)(OFF关闭　ON开启)
 ## gamemode=0
-游戏模式(0代表生存模式　1代表创造模式　2代表冒险模式　3代表旁观模式)
+游戏模式(0: 生存模式　1: 创造模式　2: 冒险模式　3: 旁观模式)
 ## force-gamemode=off
 是否强制游戏模式(OFF关闭　ON开启)
 ## hardcore=off
@@ -34,7 +34,7 @@
 ## pvp=on
 是否开启PVP(OFF关闭　ON开启)
 ## difficulty=1
-世界生存难度(0代表和平　1代表简单　2代表普通　3代表困难)
+世界生存难度(0: 和平难度　1: 简单难度　2: 普通难度　3: 困难难度)
 ## generator-settings=
 世界生成器设置
 ## level-name=world
