--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -1,3 +1,3 @@
 # PNX-CLI启动器相关问题解答
 ## 如何获取PNX-CLI启动器？
-PNX-CLI[点击访问] (https://github.com/PowerNukkitX/PNX-CLI/actions)
+PNX-CLI启动器[点击访问](https://github.com/KCodeYT/VanillaGenerator)
