--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -1,3 +1,11 @@
 # PNX-CLI启动器相关问题解答
 ## 如何获取PNX-CLI启动器？
 PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/actions)
+## PNX-CLI启动器是什么？
+它能在你的主机上快捷部署PowerNukkitX服务器,更少的占用,更方便的管理
+## PNX-CLI如何安装？
+PNX-CLI提供了4个场景部署的项目
+- PNX-CLI-JAR
+- PNX-CLI-Linux-arm
+- PNX-CLI-Linux-x86
+- PNX-CLI-Windows-x86
