--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -5,7 +5,7 @@ PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/actions)
 它能在你的主机上快捷部署PowerNukkitX服务器,更少的占用,更方便的管理
 ## PNX-CLI如何安装？
 PNX-CLI提供了4个场景部署的项目
-- PNX-CLI-JAR
+- PNX-CLI-Jar
 - PNX-CLI-Linux-arm
 - PNX-CLI-Linux-x86
 - PNX-CLI-Windows-x86
