--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -9,3 +9,9 @@ PNX-CLI提供了4个场景部署的项目
 - PNX-CLI-Linux-arm
 - PNX-CLI-Linux-x86
 - PNX-CLI-Windows-x86
+结合自身条件选择合适的软件部署
+### PNX-CLI-Jar 安装步骤
+#### Windows步骤:
+- 下载完成后使用ZIP解压PNX-CLI-Jar.zip
+- 安装Java8 X64 版本
+
