--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -4,14 +4,16 @@ PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/actions)
 ## PNX-CLI启动器是什么？
 它能在你的主机上快捷部署PowerNukkitX服务器,更少的占用,更方便的管理
 ## PNX-CLI如何安装？
-PNX-CLI提供了4个场景部署的项目
-- PNX-CLI-Jar
+PNX-CLI提供了3个场景部署的项目
 - PNX-CLI-Linux-arm
 - PNX-CLI-Linux-x86
 - PNX-CLI-Windows-x86
 结合自身条件选择合适的软件部署
-### PNX-CLI-Jar 安装步骤
+### PNX-CLI-Windows-x86 安装步骤
 #### Windows步骤:
-- 下载完成后使用ZIP解压PNX-CLI-Jar.zip
-- 安装Java8 X64 版本
-
+- 下载完成后使用ZIP解压PNX-CLI-Windows-x86.zip
+- 运行PNX.exe你需要安装相关VC运行库
+- 第一次运行PNX.exe它会提示你
+"""
+No PNX core is found. Try `pnx server install` to install a PNX core.
+"""
