--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -12,8 +12,29 @@ PNX-CLI提供了3个场景部署的项目
 ### PNX-CLI-Windows-x86 安装步骤
 #### Windows步骤:
 - 下载完成后使用ZIP解压PNX-CLI-Windows-x86.zip
-- 运行PNX.exe你需要安装相关VC运行库
-- 第一次运行PNX.exe它会提示你
+- 运行PNX.exe你需要安装相关VC运行库[注意：双击运行PNX.exe需要你完全部署完毕后进行！]
+- 首先你需要检测你的计算机是否是安装JAVA 17环境
+操作步骤:
+- Win+R键打开运行窗口
+- 在运行窗口里输入cmd打开Windows自带的命令窗口
+- 找到你PNX.exe在磁盘的那个文件夹那个位置
+例:
+我的 PNX.exe 在 F 磁盘桌面上一个叫pnx-CLI的文件夹里
 ```
-No PNX core is found. Try `pnx server install` to install a PNX core.
+F:\桌面\pnx-CLI
+```
+我们必需把命令窗口指向对应的文件夹上
+```
+C:\Users\ASUS>F: CD F:\桌面\pnx-CLI
+```
+- F: 表示磁盘F 
+- CD F:\桌面\pnx-CLI表示切换至磁盘F桌面文件夹里的PNX-CLI文件夹下
+输入下述指令
+```
+pnx jvm check
+```
+- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！
+如果没有安装JAVA 17 输入下述指令安装
+```
+pnx jvm install GraalVM
 ```
