--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -28,12 +28,12 @@ F:\桌面\pnx-CLI
 C:\Users\ASUS>F: CD F:\桌面\pnx-CLI
 ```
 - F: 表示磁盘F 
-- CD F:\桌面\pnx-CLI表示切换至磁盘F桌面文件夹里的PNX-CLI文件夹下
+- CD F:\桌面\pnx-CLI表示切换至磁盘F桌面文件夹里的PNX-CLI文件夹下\
 输入下述指令
 ```
 pnx jvm check
 ```
-- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！
+- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！\
 如果没有安装JAVA 17 输入下述指令安装
 ```
 pnx jvm install GraalVM
