--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -19,6 +19,7 @@ PNX-CLI提供了3个场景部署的项目
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
 - 找到你PNX.exe在磁盘的那个文件夹那个位置\
 例:
+----
 我的 PNX.exe 在 F 磁盘桌面上一个叫pnx-CLI的文件夹里
 ```
 F:\桌面\pnx-CLI
@@ -34,7 +35,9 @@ C:\Users\ASUS>F: CD F:\桌面\pnx-CLI
 pnx jvm check
 ```
 - 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！\
-如果没有安装JAVA 17 输入下述指令安装
+如果没有安装JAVA 17 输入下述指令安装(反之跳过)
 ```
 pnx jvm install GraalVM
 ```
+需要等待一段时间(根据自身主机网速决定)
+
