--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -19,8 +19,8 @@ PNX-CLI提供了3个场景部署的项目
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
 - 找到你PNX.exe在磁盘的那个文件夹那个位置\
 ----
-例:\
-我的 PNX.exe 在 F 磁盘桌面上一个叫pnx-CLI的文件夹里
+**例** :\
+我的 PNX.exe 在 **F磁盘**\桌面\pnx-CLI文件夹里
 ```
 F:\桌面\pnx-CLI
 ```
@@ -28,8 +28,7 @@ F:\桌面\pnx-CLI
 ```
 C:\Users\ASUS>F: CD F:\桌面\pnx-CLI
 ```
-- F: 表示磁盘F 
-- CD F:\桌面\pnx-CLI表示切换至磁盘F桌面文件夹里的PNX-CLI文件夹下\
+**F: CD F:\桌面\pnx-CLI** 这段是你PNX.exe所在文件夹
 ----
 输入下述指令
 ```
