--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -26,18 +26,28 @@ F:\桌面\pnx-CLI
 ```
 我们必需把命令窗口指向对应的文件夹上
 ```
-C:\Users\ASUS>F: CD F:\桌面\pnx-CLI
+C:\Users\ASUS> **F: CD F:\桌面\pnx-CLI**
 ```
-**F: CD F:\桌面\pnx-CLI** 这段是你PNX.exe所在文件夹
+**F: CD F:\桌面\pnx-CLI**\
+这段是你PNX.exe所在文件夹
+
 ----
-输入下述指令
+输入下述指令,检测你计算机是否有PowerNukkitX的java运行环境
 ```
 pnx jvm check
 ```
-- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！\
-如果没有安装JAVA 17 输入下述指令安装(反之跳过)
+输入下述指令查看可安装的JVM
 ```
-pnx jvm install GraalVM
+pnx jvm remote
+```
+- 1. GraalVM (349MB)
+- 2. AdoptOpenJDK (41.1MB)
+- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！\
+输入下述指令安装(反之跳过)
+```
+pnx jvm install=GraalVM 
+或 
+pnx jvm install=AdoptOpenJDK
 ```
 需要等待一段时间(根据自身主机网速决定)
 
