--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -26,9 +26,9 @@ F:\桌面\pnx-CLI
 ```
 我们必需把命令窗口指向对应的文件夹上
 ```
-C:\Users\ASUS> **F: CD F:\桌面\pnx-CLI**
+C:\Users\ASUS>F: CD  **F:\桌面\pnx-CLI**
 ```
-**F: CD F:\桌面\pnx-CLI**\
+**F:\桌面\pnx-CLI**\
 这段是你PNX.exe所在文件夹
 
 ----
