--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -13,7 +13,9 @@ PNX-CLI提供了3个场景部署的项目
 #### Windows步骤:
 - 下载完成后使用ZIP解压PNX-CLI-Windows-x86.zip
 - 运行PNX.exe你需要安装相关VC运行库[注意：双击运行PNX.exe需要你完全部署完毕后进行！]
-- 首先你需要检测你的计算机是否是安装JAVA 17环境
+1. 首先你需要检测你的计算机是否是安装JAVA 17环境
+2. 安装PNX服务端核心
+3. 安装PNX运行所需的依赖库
 操作步骤:
 - Win+R键打开运行窗口
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
@@ -24,12 +26,12 @@ PNX-CLI提供了3个场景部署的项目
 ```
 F:\桌面\pnx-CLI
 ```
-我们必需把命令窗口指向对应的文件夹上
+我们必需把命令窗口指向对应的文件夹下
 ```
 C:\Users\ASUS>F: CD  **F:\桌面\pnx-CLI**
 ```
 **F:\桌面\pnx-CLI**\
-这段是你PNX.exe所在文件夹
+这段是你PNX.exe所在文件夹下
 
 ----
 输入下述指令,检测你计算机是否有PowerNukkitX的java运行环境
