--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -15,7 +15,7 @@ PNX-CLI提供了3个场景部署的项目
 - 运行PNX.exe你需要安装相关VC运行库[注意：双击运行PNX.exe需要你完全部署完毕后进行！]
 1. 首先你需要检测你的计算机是否是安装JAVA 17环境
 2. 安装PNX服务端核心
-3. 安装PNX运行所需的依赖库
+3. 安装PNX运行所需的依赖库\
 操作步骤:
 - Win+R键打开运行窗口
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
