--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -19,7 +19,7 @@ PNX-CLI提供了3个场景部署的项目
 操作步骤:
 - Win+R键打开运行窗口
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
-- 找到你PNX.exe在磁盘的那个文件夹那个位置\
+- 找到你PNX.exe在磁盘的那个文件夹那个位置
 ----
 **例** :\
 我的 PNX.exe 在 **F磁盘**\桌面\pnx-CLI文件夹里
