--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -7,7 +7,7 @@ PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/actions)
 PNX-CLI提供了3个场景部署的项目
 - PNX-CLI-Linux-arm
 - PNX-CLI-Linux-x86
-- PNX-CLI-Windows-x86
+- PNX-CLI-Windows-x86\
 结合自身条件选择合适的软件部署
 ### PNX-CLI-Windows-x86 安装步骤
 #### Windows步骤:
