--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -43,8 +43,9 @@ pnx jvm check
 ```
 pnx jvm remote
 ```
-- 1. GraalVM (349MB)
-- 2. AdoptOpenJDK (41.1MB)
+选择以下任意一款JVM安装到你计算机\
+1. GraalVM (349MB)
+2. AdoptOpenJDK (41.1MB)
 - 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！\
 输入下述指令安装(反之跳过)
 ```
