--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -54,5 +54,19 @@ pnx jvm install=GraalVM
 ```
 pnx jvm install=AdoptOpenJDK
 ```
-需要等待一段时间(根据自身主机网速决定)
-
+需要等待一段时间(根据自身主机网速决定)\
+安装完毕后输入下述指令安装PNX核心
+```
+pnx server install
+```
+这时会出现最近30天内更新的PNX主分支核心\
+在下述文本后输入对应分支的编号,即可下载
+```
+Enter the index of the PNX version you want to install:
+```
+安装完毕后输入下述指令安装PNX运行所需的依赖库
+```
+pnx libs -u
+```
+需要等待一段时间(根据自身主机网速决定)\
+这时你PNX服务端基本工作已完成部署！
