--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -29,7 +29,7 @@ F:\桌面\pnx-CLI
 ```
 我们必需把命令窗口指向对应的文件夹下
 ```
-C:\Users\ASUS>F: CD  **F:\桌面\pnx-CLI**
+C:\Users\ASUS>F: CD F:\桌面\pnx-CLI
 ```
 **F:\桌面\pnx-CLI**\
 这段是你PNX.exe所在文件夹下
