--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -9,15 +9,13 @@ PNX-CLI提供了3个场景部署的项目
 - PNX-CLI-Linux-x86
 - PNX-CLI-Windows-x86\
 结合自身条件选择合适的软件部署
-### PNX-CLI-Windows-x86 安装步骤
-#### Windows步骤:
+### 基于PNX-CLI-Windows-x86 安装PNX服务器相关步骤
+#### 操作步骤
 - 下载完成后使用ZIP解压PNX-CLI-Windows-x86.zip
 - 运行PNX.exe你需要安装相关VC运行库[注意：双击运行PNX.exe需要你完全部署完毕后进行！]
 1. 首先你需要检测你的计算机是否是安装JAVA 17环境
 2. 安装PNX服务端核心
 3. 安装PNX运行所需的依赖库\
-----
-**操作步骤**:
 - Win+R键打开运行窗口
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
 - 找到你PNX.exe在磁盘的那个文件夹那个位置
