--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -15,7 +15,8 @@ PNX-CLI提供了3个场景部署的项目
 2. 首先你需要检测你的计算机是否是安装JAVA 17环境
 3. 安装PNX服务端核心
 4. 安装PNX运行所需的依赖库
-5. 运行PNX.exe你需要安装相关VC运行库\ **注意：双击运行PNX.exe需要PNX服务端基本工作已完成部署后进行**
+5. 运行PNX.exe你需要安装相关VC运行库\ 
+**注意：双击运行PNX.exe需要PNX服务端基本工作已完成部署后进行**
 - Win+R键打开运行窗口
 - 在运行窗口里输入cmd打开Windows自带的命令窗口
 - 找到你PNX.exe在磁盘的那个文件夹那个位置
