--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -1,6 +1,6 @@
 # PNX-CLI启动器相关问题解答
 ## 如何获取PNX-CLI启动器？
-PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/actions)
+PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/releases/tag/v0.0.1)
 ## PNX-CLI启动器是什么？
 它能在你的主机上快捷部署PowerNukkitX服务器,更少的占用,更方便的管理
 ## PNX-CLI如何安装？
@@ -45,7 +45,7 @@ pnx jvm remote
 选择以下任意一款JVM安装到你计算机
 1. GraalVM (349MB)
 2. AdoptOpenJDK (41.1MB)
-- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理JavaScript速度更快！\
+- 强烈推荐使用 GraalVM JAVA 这能让你的PowerNukkitX在处理Java与JavaScript速度更快！\
 输入下述指令安装(反之跳过)
 ```
 pnx jvm install=GraalVM  
