--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -69,6 +69,6 @@ Enter the index of the PNX version you want to install:
 pnx libs -u
 ```
 需要等待一段时间(根据自身主机网速决定)\
-这时你PNX服务端基本工作已完成部署！
+安装完毕后你PNX服务端基本工作已完成部署！
 ### 基于PNX-CLI-Linux-x86 安装PNX服务器相关步骤
 #### 操作步骤
