--- a/PowerNukkitX/faq/启动器相关问题.md
+++ b/PowerNukkitX/faq/启动器相关问题.md
@@ -12,7 +12,7 @@ PNX-CLI提供了3个场景部署的项目
 ### 基于PNX-CLI-Windows-x86 安装PNX服务器相关步骤
 #### 操作步骤
 1. 下载完成后使用ZIP解压PNX-CLI-Windows-x86.zip
-2. 首先你需要检测你的计算机是否是安装JAVA 17环境
+2. 检测你的计算机是否是安装JAVA 17环境
 3. 安装PNX服务端核心
 4. 安装PNX运行所需的依赖库
 5. 运行PNX.exe你需要安装相关VC运行库\
@@ -72,3 +72,7 @@ pnx libs -u
 安装完毕后你PNX服务端基本工作已完成部署！
 ### 基于PNX-CLI-Linux-x86 安装PNX服务器相关步骤
 #### 操作步骤
+1. 下载完成后使用UNZIP解压PNX-CLI-Linux-x86.zip
+2. 检测你的计算机是否是安装JAVA 17环境
+3. 安装PNX服务端核心
+4. 安装PNX运行所需的依赖库
