Update and rename 启动器相关问题.md to 启动器安装与调试.md

--- a/PowerNukkitX/faq/启动器安装与调试.md
+++ b/PowerNukkitX/faq/启动器安装与调试.md
@@ -1,4 +1,4 @@
-# PNX-CLI启动器相关问题解答
+# PNX-CLI启动器新手教学
 ## 如何获取PNX-CLI启动器？
 PNX-CLI启动器[点击访问](https://github.com/PowerNukkitX/PNX-CLI/releases/tag/v0.0.1)
 ## PNX-CLI启动器是什么？
