--- a/PowerNukkitX/快速入门.md
+++ b/PowerNukkitX/快速入门.md
@@ -1,61 +1,23 @@
 # 快速入门
 
 跟随本教程，十分钟（不包括下载耗时）开启您的第一个PowerNukkitX服务器。  
-本教程将带您使用PowerNukkitX的启动器（Bootstrap）来快速安装并启动服务器。
+本教程将带您使用PowerNukkitX的命令行工具（CLI）来快速安装并启动服务器。
 
-## 配置环境
+## 下载命令行工具
 
-### 下载启动器  
+点击前往 [Github发行版](https://github.com/PowerNukkitX/PNX-CLI/releases) 下载命令行。  
+请根据您的计算机实际情况来下载对应的版本：
 
-稳定版：  
-点击下载稳定版启动器[master-ef2e75c](https://assets.powernukkitx.cn/stable/Bootstrap-0.0.1-beta-shaded.jar)  
+| 操作系统    | CPU          | 名称                  | 备注            |
+|---------|--------------|---------------------|---------------|
+| Windows | x86(x64)     | PNX-CLI-Windows-x86 ||
+| Linux   | x86(x64)     | PNX-CLI-Linux-x86   ||
+| Linux   | arm(aarch64) | PNX-CLI-Linux-arm   ||
+| 其他平台    | 任意           | PNX-CLI-Jar         | 需要安装了Java才能使用 |
 
-最新版：
-前往[自动构建页面](https://github.com/PowerNukkitX/PowerNukkitX/actions)，打开您要下载的版本的构建界面并下载PowerNukkitX-Bootstrap
-构件，下载完成后解压。  
 
-### 安装Java环境
+下载完成后，请解压并将其中的可执行文件提取出来
 
-#### Windows
+## 使用命令行工具  
 
-下载OpenJDK17[安装包](https://mirrors.tuna.tsinghua.edu.cn/Adoptium/17/jre/x64/windows/OpenJDK17U-jre_x64_windows_hotspot_17.0.3_7.msi)
-并按照提示安装，一路默认下一步即可完成安装。  
-
-#### Linux
-
-Ubuntu系统安装：  
-```shell
-sudo apt update && sudo apt upgrade -y
-sudo apt-get install openjdk-17-jre
-```
-
-## 启动服务器  
-
-### 命令行启动
-
-将启动器jar包复制到你要开服的文件夹中，并在此文件夹下输入命令：  
-```shell
-java -jar Bootstrap-0.0.1-beta-shaded.jar
-```
-随后启动器将自动开始配置，按照控制台给出的提示，启动器会自动下载配置好PNX需要的java环境，下载并安装PNX核心及依赖库，随后服务器会自动启动。  
-如果您在关服后想要再次开服，再次输入上面的命令即可。  
-
-正常开服界面如下：  
-![](%relativePrefix%image/zh-cn/get-start/0.png)  
-
-欲关闭服务器，输入`stop`即可。  
-
-### 图形界面启动  
-
-如果您使用Windows系统、MacOS系统或带有图形界面的Linux系统，可以通过图形界面来管理并启动服务器。  
-在Windows或MacOS上，如果您已经正确地配置了Java运行环境，您可以直接双击启动器jar包来打开PNX界面；在Linux上，您可以通过`java -jar Bootstrap-0.0.1-beta-shaded.jar --gui`
-来在安装了图形界面的系统中打开PNX界面，PNX正确启动后会显示如下界面：  
-![](%relativePrefix%image/zh-cn/get-start/1.png)  
-
-点击 窗口 -> 检查更新，打开更新检查窗口：  
-![](%relativePrefix%image/zh-cn/get-start/2.png)  
-双击标有叉号的项目，挨个双击子项，启动器就会自动修复你点击的子项，直到所有的叉号都消失为止。  
-
-点击 服务端 -> 启动服务端，即可启动PowerNukkitX服务器：  
-如果出现此界面，输入`chs`并回车即可以中文模式启动PowerNukkitX服务端。  
-![](%relativePrefix%image/zh-cn/get-start/3.png)   
+参见[PNX-CLI启动器新手教学](./faq/PNX-CLI启动器新手教学.html)  
