配置开发环境#P3

--- a/PowerNukkitX/plugin-dev/js/tutorial/配置开发环境.md
+++ b/PowerNukkitX/plugin-dev/js/tutorial/配置开发环境.md
@@ -27,12 +27,26 @@
 
 PNX为您在VsCode中进行javascript/typescript插件开发提供良好的支持。  
 
-### 创建插件文件夹  
+### 使用模板一键配置  
+
+您可以使用GitHub仓库模板来快速生成一个配置好的新插件项目：
+
+- [JavaScript插件模板](https://github.com/PowerNukkitX/JavaScript-Template)
+- TypeScript插件模板 (*即将到来*)
+
+您可以根据模板仓库中的指引创建自己的插件仓库，而后在Vscode中点击最左侧垂直从上到下排列的第三个按钮，进入源代码管理页面，
+点击`克隆仓库`按钮，登录GitHub账号，将刚刚生成的新插件项目拉取到本地开始开发。  
+
+**请注意，您应当按照`plugin.yml`中的注释提示进行相应的修改！**
+
+### 从头开始手动配置
+
+#### 创建插件文件夹  
 
 找到您的测试服的`./plugins`文件夹，然后在此文件夹中创建您的插件文件夹，文件夹名称需要以`@`开头。
 接下来，我们将以`@dir`代指您这一步创建的插件文件夹。  
 
-### 添加类型定义文件  
+#### 添加类型定义文件  
 
 类型定义文件能够使得vscode给您在插件开发时智能提示和纠错，强烈建议您使用类型定义文件。  
 
