修复InventoryMoveItemEvent描述错误

--- a/PowerNukkitX/plugin-dev/res/事件对照表.md
+++ b/PowerNukkitX/plugin-dev/res/事件对照表.md
@@ -86,7 +86,7 @@
 - [cn.nukkit.event.inventory.InventoryClickEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryClickEvent.html)  玩家点击物品栏
 - [cn.nukkit.event.inventory.InventoryCloseEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryCloseEvent.html)  玩家关闭物品栏
 - [cn.nukkit.event.inventory.InventoryEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryEvent.html)  物品栏事件的统称
-- [cn.nukkit.event.inventory.InventoryMoveItemEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryMoveItemEvent.html)  玩家移动物品栏中物品
+- [cn.nukkit.event.inventory.InventoryMoveItemEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryMoveItemEvent.html)  非玩家移动物品栏中物品
 - [cn.nukkit.event.inventory.InventoryOpenEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryOpenEvent.html)  玩家打开物品栏
 - [cn.nukkit.event.inventory.InventoryPickupArrowEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryPickupArrowEvent.html)  物品栏捡起箭头
 - [cn.nukkit.event.inventory.InventoryPickupItemEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/inventory/InventoryPickupItemEvent.html)  物品栏捡起物品
