--- a/PowerNukkitX/plugin-dev/js/tutorial/基本知识.md
+++ b/PowerNukkitX/plugin-dev/js/tutorial/基本知识.md
@@ -83,4 +83,48 @@ import { Player } from "cn.nukkit.Player";
 ```
 
 导入Java类将会是日后开发中用到最多的导入，Java中任何的Java类都可以被导入，包括Java自带的，PNX中的和其他Jar包插件中的。
-您可以在JavaDoc中查看相关内容。  
+
+在上面的例子中，我们导入了`Player`类，每个Java类都有一个直接类名和完整类名，直接类名就是类本身的名字，比如上面
+我们提到的`Player`，而完整类名是这个类的包名加上直接类名，对于`Player`而言，其包名为`cn.nukkit`，所以完整
+类名即为`cn.nukkit.Player`，包名类似于文件夹，只不过它是一个Jar包内部的类似于文件夹的文件分类方式。  
+
+在导入Java包的时候，导入的模块名直接写完整类名即可。  
+
+您可以在JavaDoc中查看相关Java类的内容。如果还有更多不明白的地方，可以查看 [模块详解章节](../模块.html)。  
+
+## 理解名称  
+
+PNX的API都尽量以见名知义的方式命名，看到一个函数或变量就立即可以大概知道它的作用。  
+
+比如有一个函数的名字是`getAndKillEntity`，我们就可以将这个函数的名字以大写字母来分割拆解为get、and、kill、entity
+四个单词，逐词翻译为 获取、并且、杀死、实体，连起来就是获取一个实体并把它杀死，这样就解读出了这个函数的作用。  
+
+再比如有一个事件的名字为`PlayerJoinEvent`，拆解为 player、join、event，逐词翻译为 玩家 进入 事件，连起来
+就是玩家进服事件，那么你就可以知道这个事件会在玩家进入服务器的时候被触发了。  
+
+> 关于事件的具体内容，我们会在以后的章节讲述，这里不必理解透彻  
+
+## MC中基本概念  
+
+### 游戏刻  
+
+MC，包括PNX中，游戏是以游戏刻为单位运行的，每个游戏刻中PNX会完成一次整个游戏的运算。游戏刻又称GT或者tick。  
+
+tps（Tick per second）指每秒有多少游戏刻，通常情况下tps的值为20，这也意味着每个tick的时长为0.05秒，即50毫秒。
+但是，在性能不足的情况下，tps会下降，此时tick的时长会变长，玩家会感到卡顿。  
+
+### 实体  
+
+实体指一个游戏中可自由运动的独立单元，通常意义上包括载具（矿车、船等）、生物、玩家、掉落物、弹射物（箭、鸡蛋、雪球等）
+和经验球。  
+
+每个实体都具有自己的实体网络ID（数字ID），字符串ID，实体名称，血量，位置（坐标）和NBT，部分实体还具有物品栏和AI等。  
+
+每个实体每tick都会进行一次完整的运算处理，包括计算运动，坐标，AI和其他一些行为等。  
+
+### 物品  
+
+物品指以物品堆形式存在的物品，通常指物品栏中（背包，箱子等）那种状态的物品，扔出去掉到地上的物品是掉落物实体而非
+我们这里说的物品。 
+
+每个物品都有自己的数字ID、字符串ID、数量和特殊值，部分物品具有NBT。数字ID已经不被推荐使用，请尽量使用字符串ID。  
