--- a/PowerNukkitX/faq/开服问题.md
+++ b/PowerNukkitX/faq/开服问题.md
@@ -61,3 +61,9 @@ netstat -tln | grep 19132
 kill -9 进程PID
 ```
 
+## java.lang.NoClassDefFoundError: org/objectweb/asm/Type
+如果使用的是pnx-cli,请使用以下命令更新依赖库
+```
+pnx libs update
+```
+如果使用的是shaded版本核心,请在action中下载更新最新核心.
