--- a/PowerNukkitX/plugin-dev/res/事件对照表.md
+++ b/PowerNukkitX/plugin-dev/res/事件对照表.md
@@ -178,6 +178,7 @@
 - [cn.nukkit.event.command.ScoreboardScoreChangeEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/command/ScoreboardScoreChangeEvent.html)  计分板分数更改
 - [cn.nukkit.event.server.ServerCommandEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/server/ServerCommandEvent.html)  服务器命令（控制台）
 - [cn.nukkit.event.server.ServerEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/server/ServerEvent.html)  服务器事件的统称
+- [cn.nukkit.event.server.ServerStartedEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/server/ServerStartedEvent.html)  服务器启动
 - [cn.nukkit.event.server.ServerStopEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/server/ServerStopEvent.html)  服务器停止
 - [cn.nukkit.event.block.SignChangeEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/block/SignChangeEvent.html)  告示牌文字改动
 - [cn.nukkit.event.block.SignColorChangeEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/block/SignColorChangeEvent.html)  告示牌颜色改动
