--- a/PowerNukkitX/plugin-dev/js/tutorial/事件监听.md
+++ b/PowerNukkitX/plugin-dev/js/tutorial/事件监听.md
@@ -1,6 +1,6 @@
 # 事件监听  
 
-事件是PNX中插件执行工作的主要方式之一，本章节将带您学会使用PNX-JS进行事件监听。  
+事件是PNX中插件执行工作的主要方式之一，本章节将通过带您制作一个简单的屏蔽词插件带您学会使用PNX-JS进行事件监听。  
 
 ## 什么是事件  
 
@@ -28,4 +28,105 @@ PNX中提供了非常多事件，您可以在 [事件对照表](../../res/事件
 
 在PNX-JS中，注册事件监听器是通过`:powernukkitx`内置模块中的`PowerNukkitX`来执行的，下面提供了一个简单的模板：  
 
+```javascript
+import { PowerNukkitX, EventPriority } from ":powernukkitx"; // PowerNukkitX和EventPriority都是:powernukkitx内置模块中的
 
+// 注册事件监听器只能在main函数中或者main函数执行完毕之后才可以
+export function main() {
+    PowerNukkitX.listenEvent("cn.nukkit.event.Event", //这里的字符串写事件的类名，在事件对照表中有
+        EventPriority.NORMAL, // 监听器的优先级，有LOWEST LOW NORMAL HIGH HIGHEST MONITOR六级，LOW最先，MONITOR最后
+        event => { // 这个箭头函数的event参数就是事件对象，类型即为上面你写的事件的类
+        // 事件处理代码
+    })
+}
+```
+
+`:powernukkitx`模块提供了一系列服务器插件所需要的最基本功能函数，比如注册事件监听器，注册函数等等，具体内容可以看
+[powernukkitx内置模块JSDoc](../inner-module/powernukkitx.html) 。  
+
+## 实现禁止发出脏话的功能
+
+这里，我们通过注册一个 [cn.nukkit.event.player.PlayerChatEvent](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/event/player/PlayerChatEvent.html) 
+*(玩家聊天事件)* 来监听玩家在聊天框中发出消息的事件，并检测玩家是否发出了脏话，如果是，则取消事件，让玩家无法
+发出这条带有脏话的消息。  
+
+```javascript
+export function main() {
+    PowerNukkitX.listenEvent("cn.nukkit.event.player.PlayerChatEvent", EventPriority.NORMAL, event => {
+        
+    })
+}
+```
+
+首先，我们应该判断事件是否已经取消，如果事件已经被其他插件取消了，我们就不需要再进行判断。  
+
+```javascript
+export function main() {
+    PowerNukkitX.listenEvent("cn.nukkit.event.player.PlayerChatEvent", EventPriority.NORMAL, event => {
+        if (event.isCancelled()) {
+            return;
+        }
+    })
+}
+```
+
+我们查阅玩家聊天事件的JavaDoc可知 *(在事件对照表中可以点击链接)* ，它继承自`cn.nukkit.event.Event`类，所以
+它也拥有`isCancelled`函数 *(查询这个事件是否已经取消)* 和`setCancelled`函数 *(取消这个事件)*。  
+
+> JavaDoc中有如下部分：  
+> 从类继承的方法 cn.nukkit.event.Event  
+> getEventName, isCancelled, setCancelled, setCancelled  
+
+接下来，我们获取事件中玩家发送的消息，判断其中是否有`fuck`这一脏话，如果有则取消这个事件。  
+
+```javascript
+export function main() {
+    PowerNukkitX.listenEvent("cn.nukkit.event.player.PlayerChatEvent", EventPriority.NORMAL, event => {
+        if (event.isCancelled()) {
+            return;
+        }
+        if (event.getMessage().includes("fuck")) { // 检测消息中是否有fuck
+            event.setCancelled();
+        }
+    })
+}
+```
+
+查阅玩家聊天事件的JavaDoc可知，它有一个叫做`getMessage`的方法，根据我们之前说的望名知义的方法，分解为`get`和
+`Message`，即`获取`和`消息`，连起来就是`获取消息`，JavaDoc上面说它返回`String`，就是字符串，我们就能大概确定，
+这个函数可以从事件中获取玩家发送的消息。这样的过程不会再在以后赘述，希望你已经掌握了。  
+
+我们不仅要让玩家发不出去，而且还要让玩家知道自己不是网卡了而是因为被禁止发脏话了，我们要给玩家一些提示：  
+
+```javascript
+export function main() {
+    PowerNukkitX.listenEvent("cn.nukkit.event.player.PlayerChatEvent", EventPriority.NORMAL, event => {
+        if (event.isCancelled()) {
+            return;
+        }
+        if (event.getMessage().includes("fuck")) {
+            event.setCancelled();
+            event.getPlayer().sendMessage("禁止说脏话");
+        }
+    })
+}
+```
+
+查阅玩家聊天事件的JavaDoc可知`getPlayer`方法能返回这个事件的玩家，接下来，我们可以点击JavaDoc中的方法返回值，
+那是指向返回值的类型的JavaDoc文档的链接，在 [cn.nukkit.Player](https://javadoc.io/doc/cn.powernukkitx/powernukkitx/latest/cn/nukkit/Player.html)
+也就是玩家类的JavaDoc中，我们找到了`sendMessage`函数，用于向玩家发送消息。PNX的设计哲学中，在对象上面使用的方法(函数)
+通常只会对这个对象生效，也就是说我们对这个玩家对象使用`sendMessage`函数，只有这一个玩家能接受到消息。  
+
+至此，我们的插件就初步完成了，接下来我们需要编写plugin.yml等，并且将插件安装到服务器中进行测试。  
+
+## 安装插件并测试  
+
+编写plugin.yml很简单，你可以遵照 [插件格式章节](../插件格式.html) 中的内容来编写。
+编写完成后，将你的js代码和yml文件复制到`plugins`文件夹下面一个以`@`加上你插件名字命名的文件夹中，重启服务器即可进服测试。  
+
+如果你在你的聊天框中输入`fuck xxx`，然后收到了一条`禁止说脏话`消息，那就说明你的插件成功了！  
+
+## 获取全部代码  
+
+本节所有的全部代码和完整插件可以在Github仓库 [ObscenityDefender](https://github.com/PowerNukkitX/ObscenityDefender)
+中获取。  
