--- a/PowerNukkitX/entity-ai/深入探索.md
+++ b/PowerNukkitX/entity-ai/深入探索.md
@@ -453,3 +453,140 @@ public class Behavior extends AbstractBehavior {
 
 这种设计模式增强了灵活性，同时体现出了一种模块化思想，即我们可以随意组合现有的评估器和执行器，通过简单的组合来获得一个全新的行为
 
+### 传感器
+
+传感器相关代码位于包`cn.nukkit.entity.ai.sensor`中
+
+#### ISensor (传感器接口)：
+```java
+/**
+ * 此接口抽象了一个传感器 <br/>
+ * 传感器用于搜集环境信息并向记忆存储器{@link cn.nukkit.entity.ai.memory.IMemoryStorage}写入一个记忆{@link IMemory}
+ */
+@PowerNukkitXOnly
+@Since("1.6.0.0-PNX")
+public interface ISensor {
+
+    /**
+     * @param entity 目标实体
+     */
+    void sense(EntityIntelligent entity);
+
+    /**
+     * 返回此传感器的刷新周期，小的刷新周期会使得传感器被更频繁的调用
+     *
+     * @return 刷新周期
+     */
+    default int getPeriod() {
+        return 1;
+    }
+}
+```
+
+当sensor()方法被调用时，传感器应向上一节所说的向实体写入记忆。由于此接口较为简单，故不在过多叙述
+
+### 记忆以及记忆存储器
+
+相关代码位于包`cn.nukkit.entity.ai.memory`中
+
+#### IMemory<T> (记忆单元接口)：
+```java
+/**
+ * 实体记忆对象，表示单个实体记忆数据
+ * 可被存储到记忆存储器{@link IMemoryStorage}中
+ * <p>
+ * 注意，对于此接口的所有实现类，都必须有一个无参构造函数，返回一个代表此记忆的空记忆
+ *
+ * @param <T> 包含的数据类型
+ */
+@PowerNukkitXOnly
+@Since("1.6.0.0-PNX")
+public interface IMemory<T> {
+
+    /**
+     * @return 此记忆中包含的数据
+     */
+    @Nullable
+    T getData();
+
+    void setData(@Nullable T data);
+
+    default boolean hasData() {
+        return getData() != null;
+    }
+}
+```
+
+泛型<T>用于指定单元中存储的值类型。
+
+需要特别注意的是，对于此接口的每个实现类，都必须要有一个无参构造函数，返回一个代表此记忆的空记忆(即`hasData()`必须返回false)，具体原因将在介绍记忆存储器的时候说明
+
+#### IMemoryStorage (记忆存储器接口)：
+```java
+/**
+ * 此接口抽象了一个记忆存储器 <br/>
+ * 记忆存储器用于存储多个记忆单元{@link IMemory}
+ */
+@PowerNukkitXOnly
+@Since("1.6.0.0-PNX")
+public interface IMemoryStorage {
+    void put(IMemory<?> memory);
+
+    <T extends IMemory<?>, R extends Class<T>> T get(R memoryClazz);
+
+    <T extends IMemory<?>> void clear(Class<T> memoryClazz);
+
+    <T extends IMemory<?>> boolean isEmpty(Class<T> memoryClazz);
+
+    <T extends IMemory<?>> boolean notEmpty(Class<T> memoryClazz);
+
+    <R, T extends IMemory<R>> boolean checkData(Class<T> memoryClazz, R data);
+
+    <R, T extends IMemory<R>> void setData(Class<T> memoryClazz, R data);
+
+    <R, T extends IMemory<R>> R getData(Class<T> memoryClazz);
+}
+```
+
+没有什么好说的，我们主要需要重点关注的是它的实现类`BehaviorStorage`的`get()`方法：
+
+```java
+/**
+ * 记忆存储器的标准实现
+ */
+@PowerNukkitXOnly
+@Since("1.6.0.0-PNX")
+@Getter
+@Log4j2
+public class MemoryStorage implements IMemoryStorage {
+    
+    //。。。省略其他方法。。。
+
+    protected ConcurrentHashMap<Class<? extends IMemory<?>>, IMemory<?>> memoryMap = new ConcurrentHashMap<>();
+
+    @Override
+    public <T extends IMemory<?>, R extends Class<T>> T get(R memoryClazz) {
+        T memory = (T) memoryMap.get(memoryClazz);
+        if (memory == null) {
+            try {
+                //若未找到指定记忆，则通过反射新建一个空记忆
+                memory = memoryClazz.getDeclaredConstructor().newInstance();
+            } catch (Throwable e) {
+                log.error("Failed to create memory instance, declared constructor not found!", e);
+            }
+            put(memory);
+        }
+        return memory;
+    }
+
+    //。。。省略其他方法。。。
+}
+```
+
+我们注意到，在`get()`方法中，若存储器未在map中找到指定的记忆单元，将会通过反射调用记忆单元的无参构造器新建一个记忆单元，这就是为什么上面我们讲到`对于此接口的每个实现类，都必须要有一个无参构造函数`
+
+这样做使得单个类型的记忆单元可被重复使用，减少GC次数。这在生物AI这种实例数非常大（事实上单端生物数量上千非常常见）的场景下是非常有意义的
+
+### 小结
+
+在这一章中我们从源码层面深入了解了AI框架。在下一节中我们将介绍运动控制器(`IController`)和寻路器(`IRouteFinder`)及其使用，并结合所学知识实现一个僵尸攻击玩家的AI!
