添加单独的配置章节

--- a/PowerNukkitX/快速入门.md
+++ b/PowerNukkitX/快速入门.md
@@ -49,5 +49,5 @@
 
 ## 配置您的PNX服务器  
 
-- 参阅[Server.properties配置介绍](./faq/Server.properties配置介绍.html)
-- 参阅[Nukkit.yml配置介绍](./faq/Nukkit.yml配置介绍.html)
+- 参阅[Server.properties配置介绍](./config/Server.properties配置介绍.html)
+- 参阅[Nukkit.yml配置介绍](./config/Nukkit.yml配置介绍.html)
