Fix broken image hyper link

--- a/PowerNukkitX/entity-ai/01_AI框架概述.md
+++ b/PowerNukkitX/entity-ai/01_AI框架概述.md
@@ -45,8 +45,8 @@ PNX的生物AI框架无论在性能，效果，易用性上都完全超过了社
 
 我们需要特别注意的是评估器与执行器的关系。来到源码，两者的接口描述如下：
 
-![](../../web/assets/image/common/entity-ai/cd5125c1.png)
-![](../../web/assets/image/common/entity-ai/6634698d.png)
+![](%relativePrefix%image/common/entity-ai/cd5125c1.png)
+![](%relativePrefix%image/common/entity-ai/6634698d.png)
 
 若行为处于非激活状态，评估器的```evaluate```方法将每gt(可调)被调用一次。
 
