完成第二章

--- a/PowerNukkitX/entity-ai/第一章 行为 - 描述实体逻辑的最小单元.md
+++ b/PowerNukkitX/entity-ai/第一章 行为 - 描述实体逻辑的最小单元.md
@@ -12,7 +12,7 @@ _**author: daoge_cmd**_
 
 对于性能，我们实现了完全的异步+并行，这使得其能完美利用多核机器。在我们的开发测试中（测试机为笔者电脑），PNX成功实现了2600个实体（羊）同屏、在完全还原原版特性的情况下，以稳定的20tps流畅运行。
 
-设计过程中，我们借鉴了JE原版的Memory，Activity，Behavior，同时融合了BE原版的模块化（组件化）等思路，这使得框架本身具有极高的易用性。为了体现易用性，核心完全实现了监守者(Warden)，狗等生物。其中监守者作为原版行为最复杂的生物之一，笔者基于PNX生物AI框架非常轻松地就实现了其包括但不限于```近战/远程攻击切换```，```愤怒值系统```等逻辑。您现在就可以开启一个PNX服务器并生成监守者，或[查看源码](https://github.com/PowerNukkitX/PowerNukkitX/blob/master/src/main/java/cn/nukkit/entity/mob/EntityWarden.java)以了解其实现，我们相信这是框架易用性的最好证明
+设计过程中，我们借鉴了JE原版的Memory，Activity，Behavior，同时融合了BE原版的模块化（组件化）等思路，这使得框架本身具有极高的易用性。为了体现易用性，核心完全实现了监守者(Warden)，狗，僵尸，苦力怕等生物。其中监守者作为原版行为最复杂的生物之一，笔者基于PNX生物AI框架非常轻松地就实现了其包括但不限于```近战/远程攻击切换```，```愤怒值系统```等逻辑。您现在就可以开启一个PNX服务器并生成监守者，或[查看源码](https://github.com/PowerNukkitX/PowerNukkitX/blob/master/src/main/java/cn/nukkit/entity/mob/EntityWarden.java)以了解其实现，我们相信这是框架易用性的最好证明
 
 我们将以“羊”这个生物作为例子，介绍框架的每个部分
 
