Fix image hyper link

--- a/PowerNukkitX/entity-ai/第二章 记忆 - 实体的海马体.md
+++ b/PowerNukkitX/entity-ai/第二章 记忆 - 实体的海马体.md
@@ -14,7 +14,7 @@ _**author: daoge_cmd**_
 
 MemoryType的可用构造函数如下: 
 
-![](../../web/assets/image/common/entity-ai/22c4fc46.png)
+![](%relativePrefix%image/common/entity-ai/22c4fc46.png)
 
 想要新建一个记忆，我们需要提供一个命名空间标识符```Identifier```以及记忆默认值（当尝试从存储器获取不存在的记忆的值时会返回默认值，可以是常量，也可以通过提供```Supplier<Data>```动态生成）
 
