完成第三章

--- a/PowerNukkitX/entity-ai/第一章 行为 - 描述实体逻辑的最小单元.md
+++ b/PowerNukkitX/entity-ai/第一章 行为 - 描述实体逻辑的最小单元.md
@@ -58,11 +58,23 @@ _**author: daoge_cmd**_
 - 1 吃草 
 - 0 看向最近玩家 & 随机漫游 
 
-### 1.1.3 核心行为
+### 1.1.3 通过组合评估器与执行器来创建行为
+
+为了编写一个新的行为，你也许会选择创建一个叫做```MyBehavior```的类并同时实现接口```IBehaviorExecutor```以及```IBehaviorEvaluator```。
+
+事实上我们不这么做，我们采用“委托”的做法来创建行为。目光聚焦到类```Behavior```以及其继承关系上:
+
+![](%relativePrefix%image/common/entity-ai/1effadd0.png)
+
+类```Behavior```同时实现了接口```IBehaviorExecutor```以及```IBehaviorEvaluator```，其构造函数要求提供评估器与执行器实现并在内部委托其方法。这样子做的最大好处是可以复用已有的评估器与执行器快速地创建全新的行为而不用重复编写逻辑。
+
+类```Behavior```同时还包含行为的优先级，评估周期等属性。你可以[查看源码](https://github.com/PowerNukkitX/PowerNukkitX/blob/master/src/main/java/cn/nukkit/entity/ai/behavior/Behavior.java)以了解详细
+
+### 1.1.4 核心行为
 
 若我们不想某行为参与到行为之间的优先级”竞争“中，我们也可以选择将行为注册为```CoreBehavior```(核心行为)。核心行为之间不存在优先级覆盖原则，其激活与否只取决于自身评估器
 
-## 1.2.0 行为组 - 行为的容器
+## 1.2.0 行为组 - 行为的容器，但不仅仅是
 
 行为组```BehaviorGroup```存放一系列行为。例如上面羊的所有行为就是一个行为组。
 
