--- a/PowerNukkitX/faq/玩家重生点相关的解释.md
+++ b/PowerNukkitX/faq/玩家重生点相关的解释.md
@@ -9,8 +9,7 @@
 世界复活点数据保存在每个世界中，玩家复活点和重生类方块复活点保存在每个玩家自身
 
 ### 简述玩家重生选择复活点的逻辑
--
-当玩家重生时，会查找是否存在玩家复活点或者重生类方块复活点，由于这两个重生点的优先级相同，所以只能存在一个，否则会选择世界复活点(
+- 当玩家重生时，会查找是否存在玩家复活点或者重生类方块复活点，由于这两个重生点的优先级相同，所以只能存在一个，否则会选择世界复活点(
 防止冲突)
 - 当玩家同时没有玩家复活点和重生类方块复活点，将会选择世界复活点重生
 - 当玩家既有玩家复活点和重生类方块复活点，也会选择世界复活点重生
