优化第二章

--- a/PowerNukkitX/entity-ai/第二章 记忆 - 实体的海马体.md
+++ b/PowerNukkitX/entity-ai/第二章 记忆 - 实体的海马体.md
@@ -22,25 +22,27 @@ MemoryType的可用构造函数如下:
 
 核心使用到的所有记忆类型保存在接口```cn.nukkit.entity.ai.memory.CoreMemoryTypes```
 
-## 1.1.0 为什么要这样设计
+## 1.1.0 通用性
 
-你可能觉得这样子真的是多此一举，为什么不直接在类中创建新的属性表达“记忆”呢？（事实上笔者最开始的设计就不包含此设定）然而记忆以及记忆存储器的设计在后来的使用中被证明十分有用
+对于不同实体使用到的含义相同的属性（例如仇恨目标），我们应尽量让他们使用相同的记忆类型。这样子，如果我们想让僵尸去攻击苦力怕，我们就可以将他们的”仇恨目标“分别设置为对方。
 
-### 1.1.1 动态性
-
-思考一下，如果我们不采用记忆存储器保存"仇恨目标"要怎么做？我们就需要设计一个接口叫做```AttackTargetEntity```并要求在使用到”仇恨目标“的实体上实现此接口的```getter```和```setter```方法。
-
-很显然，这太麻烦了。 并且最致命的是，我们失去了动态性：举个例子，若这么做，像是```MeleeAttackExecutor```之类的使用到“仇恨目标”的行为（以至于控制器，寻路器等其他组件）就需要在逻辑中使用```instanceof```并向下转型以获取数据，
-我们同时还失去了运行时动态添加行为的能力（例如我们想将僵尸的近战攻击行为动态添加到实例化的羊，但是羊并没有实现```MeleeAttackExecutor```）。事实上，使用接口方法在动态性上的影响远不止这些并无法一一罗列
-
-### 1.1.2 通用性
-
-对于不同实体使用到的含义相同的属性（例如仇恨目标），我们就可以让他们使用相同的记忆类型。举个例子，如果我们想让僵尸去攻击苦力怕，我们就可以将他们的”仇恨目标“分别设置为对方。
-
-使用接口方法确实也可以做到，但是我们需要多一步向下转型。并且与上面相同的是，我们失去了运行时动态添加行为的能力
-
-### 1.1.3 桥梁 - 连接不同组件
+### 1.1.1 连接不同组件
 
 事实上，记忆存储器不仅为行为提供信息，它还在组件间发挥了桥梁作用。例如默认的几个运动控制器就通过读取```MOVE_DIRECTION_START```、```MOVE_DIRECTION_END```等记忆移动实体，寻路器通过读取```MOVE_TARGET```计算路径。
 
 通过记忆存储器，不同的简单组件被无缝衔接到了一起，实现了实体的复杂行为
+
+## 1.2.0 作为属性保存还是作为记忆保存？
+
+对于实体的数据（生命值，攻击伤害，仇恨目标，愤怒状态等），你可以选择将其作为属性直接保存在实体类上，并用接口抽象它的```getter/setter```。你也可以选择将其作为memory保存在实体记忆中。那是不是应该将所有数据都保存进memory呢？
+
+看完上述内容，你也许会认为应该都存入到memory中，然而这样并不一定好。
+
+对于**实体基础属性**，例如血量，生命值，攻击伤害等，我们规定应将其保存为实体类的属性并使用接口抽象
+
+对于**实体运行时属性**，例如warden的愤怒值，实体寻路目标，仇恨目标等，我们规定应将其保存进memory
+
+若你依然无法正确区分，我们还有个简单的判断方法，即观察属性是否应在实体生命周期结束（简单说就是close()掉了）后被保存。若应被保存，你就应该将其保存为实体类的属性而不是memory
+
+
+
