完成第六章

--- a/PowerNukkitX/entity-ai/第一章 行为 - 描述实体逻辑的最小单元.md
+++ b/PowerNukkitX/entity-ai/第一章 行为 - 描述实体逻辑的最小单元.md
@@ -84,4 +84,6 @@ _**author: daoge_cmd**_
 - 记忆存储（连接所有组件的桥梁）
 - 传感器（用于从环境中收集数据并写入到实体的记忆）
 - 寻路器（提供寻路实现）
-- 控制器（提供基于寻路结果的生物移动实现）
+- 控制器（提供生物运动实现）
+
+详细请见第六章
