--- a/PowerNukkitX/entity-ai/第七章 工作周期.md
+++ b/PowerNukkitX/entity-ai/第七章 工作周期.md
@@ -74,3 +74,9 @@ public boolean onUpdate(int currentTick) {
 - 6 运行激活行为的执行器
 - 7 调用运动控制器
 - 【调试】8 debugTick
+
+## 1.2 题外话： 关于调试模式
+
+框架存在一个“DEBUG模式”，在此模式下，生物名称将显示当前行为运行情况，当你拿木棍右键实体时将出现一个弹窗，显示有关此实体的信息
+
+你可以通过设置```nukkit.yml```中的```debug.commands```为```true```并在游戏中使用命令```/debug entity true```来开启调试模式
